# sdeux

./: README.rst  requirements.txt  setup.cfg
sdeux/: S2_rpc_client.py  communication.py  gen2005.py  gen5.py
sdeux/calibr/: Makefile  analyze.py  commands.py  generate_binary.py  s2_cal_db.py  set_serial.py
sdeux/s2Qualification/: gen2005_fast_and_furious.py  gen2005_qualif.py  gen2005_qualif_currlim_all_modes.py  gen2005_qualif_fast_mode_new_fw_delay.py  gen2005_qualif_fast_mode_new_fw_full.py  gen2005_qualif_short.py  gen2005_validation_csv_to_fill.py  gen2005_validation_filled_csv_to_db.py  gen2005_validation_report.py  gen5_qualif.py  test_time.py
sdeux/tests/: arduino_comm.py  curr_calibration.py  gen2005_qualif_3832a1.py  gen2005_qualif_AB.py  gen2005_qualif_AB_base_signal.py  gen2005_qualif_AB_input_analysis.py  gen2005_qualif_AB_overflow.py  gen2005_qualif_debug.py  s2_advsettings.py  test_calibr_fit.py  volt_calibration.py
sdeux/updater/: raspi.py  writer.py
sdeux/utils/: get_functions.py
stools/: S2_rpc_client.py  __init__.py  auto_detect.py  defs.py  gen2005.py  gen4.py  gen5.py  serial_handler.py
stools/calibr/: commands.py  confirmation.py  s2.py  s2_local_settings.py  set_serial.py
stools/s2Qualification/: gen2005_fast_and_furious.py  gen2005_qualif.py  gen2005_qualif_AB.py  gen2005_qualif_currlim_all_modes.py  gen2005_qualif_debug.py  gen2005_qualif_fast_mode_new_fw_delay.py  gen2005_qualif_fast_mode_new_fw_full.py  gen2005_qualif_short.py  gen2005_validation_csv_to_fill.py  gen2005_validation_filled_csv_to_db.py  gen2005_validation_report.py  (+2 more)
(+45 files in other folders)
