[metadata]
name=stools
author = chiesa
description-file = README.rst
license = Proprietary
classifier = 
    Intended Audience :: Developers
    License :: Other/Proprietary License
    Natural Language :: English
    Programming Language :: Python :: 3
keywords=stools
[files]
packages = 
     stools
[entry_points]
console_scripts = 
