[metadata]
name=sdeux
author = chiesa
description-file = README.rst
license = Proprietary
classifier = 
    Intended Audience :: Developers
    License :: Other/Proprietary License
    Natural Language :: English
    Programming Language :: Python :: 3
keywords=sdeux
[files]
packages = 
     sdeux
[entry_points]
console_scripts =
    update_s2 = sdeux.updater.raspi:main
